NetBSD Problem Report #50669

From www@NetBSD.org  Sun Jan 17 09:43:44 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id F3F867ACAD
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 17 Jan 2016 09:43:43 +0000 (UTC)
Message-Id: <20160117094343.2AA8F7ACBC@mollari.NetBSD.org>
Date: Sun, 17 Jan 2016 09:43:43 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/arm/arm/cpufunc.c:2333: bad if test ?
X-Send-Pr-Version: www-1.0

>Number:         50669
>Category:       port-arm
>Synopsis:       src/sys/arch/arm/arm/cpufunc.c:2333: bad if test ?
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    port-arm-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jan 17 09:45:00 +0000 2016
>Closed-Date:    Mon May 30 17:48:57 +0000 2016
>Last-Modified:  Mon May 30 17:48:57 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160116
>Organization:
>Environment:
>Description:
[src/sys/arch/arm/arm/cpufunc.c:2333]: (style) Expression is always false because 'else if' condition matches previous condition at line 2307.

    } else if ((fault_instruction & 0x0e000000) == 0x0c000000) {
        // ...
    } else if ((fault_instruction & 0x0e000000) == 0x0c000000)
        return ABORT_FIXUP_FAILED;

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50669 CVS commit: src/sys/arch/arm/arm
Date: Mon, 30 May 2016 17:18:38 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Mon May 30 17:18:38 UTC 2016

 Modified Files:
 	src/sys/arch/arm/arm: cpufunc.c

 Log Message:
 PR 50669 David Binderman: remove dead code


 To generate a diff of this commit:
 cvs rdiff -u -r1.160 -r1.161 src/sys/arch/arm/arm/cpufunc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 30 May 2016 17:48:57 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.