PR 50669 David Binderman: remove dead code